# ChangeLog for sys-kernel/hardened-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.421 2011/05/25 12:27:26 blueness Exp $

*hardened-sources-2.6.32-r49 (25 May 2011)

  25 May 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r49.ebuild:
  Based on 2.6.32.40 + genpatches-2.6.32-37 +
  grsecurity-2.2.2-2.6.32.40-201105222331

*hardened-sources-2.6.38-r5 (20 May 2011)

  20 May 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.38-r5.ebuild:
  Based on 2.6.38.6 + genpatches-2.6.38-6 +
  grsecurity-2.2.2-2.6.38.6-201105182052

*hardened-sources-2.6.32-r48 (20 May 2011)

  20 May 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r48.ebuild:
  Based on 2.6.32.40 + genpatches-2.6.32-37 +
  grsecurity-2.2.2-2.6.32.40-201105182052

  12 May 2011; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.32-r41.ebuild, -hardened-sources-2.6.32-r43.ebuild,
  -hardened-sources-2.6.32-r44.ebuild, -hardened-sources-2.6.32-r45.ebuild:
  Removed deprecated versions

  12 May 2011; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.38-r3.ebuild:
  Bug #365871

  12 May 2011; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.38-r1.ebuild, -hardened-sources-2.6.38-r2.ebuild:
  See bugs #365871, #365915, #366281

*hardened-sources-2.6.38-r4 (12 May 2011)

  12 May 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.38-r4.ebuild:
  Based on 2.6.38.6 + genpatches-2.6.38-6 +
  grsecurity-2.2.2-2.6.38.6-201105111839

*hardened-sources-2.6.32-r47 (12 May 2011)

  12 May 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r47.ebuild:
  Based on 2.6.32.40 + genpatches-2.6.32-37 +
  grsecurity-2.2.2-2.6.32.40-201105111839

*hardened-sources-2.6.38-r3 (11 May 2011)

  11 May 2011; Anthony G. Basile <blueness@gentoo.org>