@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.421 2011/05/25 12:27:26 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.422 2011/05/25 12:30:07 blueness Exp $
+
+*hardened-sources-2.6.38-r6 (25 May 2011)
+
+  25 May 2011; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-2.6.38-r6.ebuild:
+  Based on 2.6.38.7 + genpatches-2.6.38-7 +
+  grsecurity-2.2.2-2.6.38.7-201105222331
 
 *hardened-sources-2.6.32-r49 (25 May 2011)
 
